modification de #buttonHome en button

--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ li .itemContacts{
 	opacity: 0.7;
 	right: 0px;top: 37px;
 }
-.buttonHome{
+.button{
 	position: absolute;
 	margin: 0px;padding: 0px;
 	right: 36px;
