--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,14 @@ header > ul{
 header > ul > li{
 	color: #FFF;
 	float: right;
-	margin-right: 50px;
+	margin-left: 50px;
 }
 
 header > ul > li:hover{
 	color:#2ecc71;
+}
+ul{
+	margin-left: 5px;
 }
 .headerName{
 	display: block;
@@ -43,17 +46,16 @@ li .itemHome{
 	background-color: #2c3e50;
 	opacity: 0.7;
 	left: 0px;top: 37px;
-
 	border-radius: 5px;
 }
 
 li .itemServices{
 	display: none;
 	position: absolute;
-	width: 160px;height:80px;
+	width: 140px;height:80px;
 	background-color: #2c3e50;
 	opacity: 0.7;
-	right: 110px;top: 37px;
+	right: 90px;top: 37px;
 	border-radius: 5px;
 }
 
@@ -63,7 +65,7 @@ li .itemProjects{
 	width: 160px;height:80px;
 	background-color: #2c3e50;
 	opacity: 0.7;
-	right: 210px;top: 37px;
+	right: 160px;top: 37px;
 	border-radius: 5px;
 }
 
@@ -80,7 +82,8 @@ li .itemContacts{
 	position: absolute;
 	margin: 0px;padding: 0px;
 	right: 36px;
-	background-color: 
+	background-color: inherit;
+
 }
 .itemSelected {
 	list-style-type: none;
