--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,10 @@ button:hover {
 	background-color: #e67e22;
 	color: #ecf0f1;
 }
+
+.webNav{
+	color: #FFF;
+	display: block;
+	position: absolute;
+	left: 10%;top: 20%;
+}
