--- a/css/user.css
+++ b/css/user.css
@@ -1,3 +1,8 @@
+/*
+	Feuille de style correspondant : 
+		USER:CSS => addUser.php;
+*/
+
 .userContent {
 	display: block;position: absolute;
 	left: 20px;
